# espidf-arduino-lettel-shell

./: CMakeCache.txt  CMakeLists.txt  README.md  platformio.ini  sdkconfig.arduino_nano_esp32  sdkconfig.esp32s3_OTA  sdkconfig.m5stack-atoms3
boards/: ESP32-S3-DevKitC-1-N16R8.json  ESP32-S3-DevKitC-1-N8R8.json
components/letter-shell/: CMakeLists.txt
components/letter-shell/include/: log.h  shell.h  shell_ext.h
components/letter-shell/src/: shell.c  shell_port.c
lib/DM43/: .gitignore  DM43.cpp  DM43.h
lib/ESP32CAN/: ESP32CAN.cpp  ESP32CAN.h
src/: Blink.cpp  CMakeLists.txt  common.h  globals.h  main.cpp  main.h  shell_port.cpp  shell_port.h
test/: dm43_test.cpp  ktech_test.cpp
